--- a/presentacion/src/app/components/header/header.html
+++ b/presentacion/src/app/components/header/header.html
@@ -1,21 +1,30 @@
-<header class="h-13 flex items-center justify-between bg-gray-200">
+<header class="h-13 flex items-center justify-between bg-gray-500">
 
     <div class="empresa flex ml-4">
-        <div class="logo">yyy</div>
-        <img src="../../../../public/assest/Icono_Empresa.png" alt="">
-        <div class="titulo">Electrónica</div>
+        <div class="logo">Logo</div>
+        <div class="titulo">Presentacion</div>
     </div>
+
     <div class="me-4 flex">
-        <button mat-icon-button [matMenuTriggerFor]="menu" #menuTrigger class="cursor-pointer
-            px-1.25 py-0.5 rounded-full hover:bg-gray-300 active:border-2 active:border-gray-400">
-            <mat-icon>person</mat-icon>
+        <button mat-icon-button [matMenuTriggerFor]="menu" #menuTigger class="me-4" cursor-pointer px-1.25 py-0.5
+            rounded-full hover:bg-gray-300 active:border-2 active:border-gray-400>
+            <mat-icon>
+                person
+            </mat-icon>
+            <span> {{srvAuth.userActualS().nombre}}</span>
         </button>
-        <span class="text-white">{{srvAuth.userActualS().nombre}}</span>
     </div>
+
     <mat-menu #menu="matMenu">
-        <button mat-menu-item [routerLink]="['/login']"><mat-icon>person</mat-icon>Iniciar Sesión</button>
-        <button mat-menu-item (click)="loggOut();"><mat-icon>logout</mat-icon>Cerrar Sesión</button>
-        <mat-divider></mat-divider>
-        <button mat-menu-item ><mat-icon>key</mat-icon>Cambiar Contraseña</button>
+        @if (srvAuth.userActualS().rol == -1){
+            <button mat-menu-item [routerLink]="['/login']">Iniciar sesion</button>
+        }
+        @else {
+            <button mat-menu-item (click)="loggOut();">Cerrar sesion</button>
+            <mat-divider></mat-divider>
+            <button mat-menu-item>Cambiar Contraseña</button>
+        }
+
     </mat-menu>
+
 </header>
