--- a/presentacion/src/app/components/cliente/cliente.html
+++ b/presentacion/src/app/components/cliente/cliente.html
@@ -100,7 +100,7 @@
                                 </button>
 
 
-                                @if (srvAuth.userActualS().rol === 1) {
+                                @if (+srvAuth.userActualS().rol === 1) {
                                 <button mat-icon-button (click)="onEliminar(element.id)"
                                     class="flex content-center items-center focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-1 mx-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">
                                     <mat-icon>delete</mat-icon>
